--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "start": "node ./dist/app.js",
-    "dev": "env-cmd -f ./config/.env nodemon --exec ts-node ./src/app.ts"
+    "dev": "env-cmd -f ./config/.env nodemon --exec ts-node ./src/app.ts",
+    "build":"tsc"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
